mobile layout bug fixes, pass

--- a/front-end/src/styles/style.scss
+++ b/front-end/src/styles/style.scss
@@ -373,7 +373,7 @@ button[type="submit"] {
 
 .bar-graphs {
     max-width: 800px; /* cap width on large screens */
-    width: 70%; /* responsive on small screens */
+    width: 80%; /* responsive on small screens */
     margin: 0 auto; /* center it */
 }
 
@@ -383,6 +383,7 @@ button[type="submit"] {
     .algorithm-block {
         display: block;
         margin-bottom: 3rem;
+        padding-top: 10rem;
     }
 
     .algorithm__writing {
